# llm-router-platform

./: .gitignore  README.md
LLMRouter/: .gitignore  config.yaml  main.py  pyproject.toml
LLMRouter/app/: main.py  schemas.py
LLMRouter/app/api/: routes.py
LLMRouter/app/core/: config.py  logging.py  rules.py  telemetry.py
LLMRouter/app/providers/: anthropic.py  base.py  local.py  mock.py  openai.py  unavailable.py
LLMRouter/app/services/: inference.py  router.py
LLMRouter/dashboard/: api.py  app.py
LLMRouter/docs/: student_phase1_guide.md
LLMRouter/scripts/: send_requests.py
LLMRouter/tests/: test_api.py  test_inference.py  test_router.py  test_rules.py
Phase 1/: Phase 1.md
Phase 2/: Phase 2.md
Phase 3/: Phase 3.md
Phase 4/: Phase 4.md
Phase 5/: Phase 5.md
Phase 5/note/: LLM Gateway Console.md
