[project]
name = "llmrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]
